--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
         </div>
     </header>
     <main>
-        
+        <section class="feature">
+            <div class="team">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content">
+                <h3 class="team-title">Quick list of Our Features</h3>
+                <p class="team-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="button-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
         
