--- a/index.html
+++ b/index.html
@@ -7,46 +7,45 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <h3 class="nav-title">G3 Architects</h3>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact Us</a></li>
-                <li><a href="">Login</a></li>
-            </ul>
-        </nav>
-        <div class="banner">
-            <div class="banner_top">
-                <h3 class="banner-title">Brand New Group of Architects </h3>
-                <p class="banner-description">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
-                </p>
-                <div class="banner_btn">
-                    <button class="button-primary">Explore More</button>
-                </div>
-            </div>
-            <img class="banner-image" src="images/banner.png" alt="Banner Architech">
+   <header>
+    <nav>
+        <h3 class="nav-title">G3 Architects</h3>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Login</a></li>
+        </ul>
+    </nav>
+    <div class="banner">
+        <div class="banner-content">
+            <h1 class="banner-title">Brand New Group of Architects</h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
         </div>
-    </header>
-    <main>
-        <section class="feature">
-            <div class="team">
-                <img src="images/team1.png" alt="">
-                <img src="images/team2.png" alt="">
-                <img src="images/team3.png" alt="">
-                <img src="images/team4.png" alt="">
-            </div>
-            <div class="team-content">
-                <h3 class="team-title">Quick list of Our Features</h3>
-                <p class="team-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="button-primary">Explore More</button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        
-    </footer>
+        <img src="images/banner.png" alt="">
+    </div>
+   </header>
+   <main>
+    <section class="team-section">
+        <div class="team-image">
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+        </div>
+        <div class="team-content">
+            <h3 class="team-title">Quick list of Our Features</h3>
+            <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+    </section>
+    <section class="feature-section"></section>
+    <section class="award-section"></section>
+    <section class="sponsore-section"></section>
+   </main>
+   <footer>
+    
+   </footer>
 </body>
 </html>
